[project]
name = "auto-steer"
version = "0.2.0"
description = "Autonomous mechanistic interpretability research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "scikit-learn>=1.7.0",
    "transformers>=5.0.0",
    "torch",
    "sentencepiece>=0.2.0",
    "protobuf>=4.0.0",
]
